# lerobot_sim

./: README.md  pyproject.toml
lerobot_sim/: example.py  task_suite.py  viewer.py
lerobot_sim/assets/blocks/: blue_block.xml  red_block.xml  yellow_block.xml
lerobot_sim/assets/so101/: scene.xml  so101_new_calib.xml
lerobot_sim/assets/so_arm100/: scene.xml  so_arm100.xml
lerobot_sim/assets/trs_so_arm100/: scene.xml  so_arm100.xml
lerobot_sim/tasks/: block_stack.py  lerobot_task.py
lerobot_sim/utils/: oobb_utils.py  success_detector_utils.py
